--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
     <h2>Demo2</h2>
     <p>Listen to me</p>
     <p>Adding new line </p>
+    <p>Adding new line from locally and trying to update in remote repository </p>
 </body>
