--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     <p>Listen to me</p>
     <p>Adding new line </p>
     <p>Adding new line from locally and trying to update in remote repository </p>
+    <p style = "color: bisque;">Practicing git by changing, staging, committing and pushing</p>
 </body>
